--- a/Paper/paper.bib
+++ b/Paper/paper.bib
@@ -7,21 +7,33 @@
   url = {https://www.R-project.org/},
 }
 
-@Article{,
-  title = {The Split-Apply-Combine Strategy for Data Analysis},
-  author = {Hadley Wickham},
-  journal = {Journal of Statistical Software},
-  year = {2011},
-  volume = {40},
-  number = {1},
-  pages = {1--29},
-  url = {http://www.jstatsoft.org/v40/i01/},
-}
+@Book{,    author = {Hadley Wickham},    title = {ggplot2: Elegant Graphics for Data Analysis},    publisher = {Springer-Verlag New York},    year = {2016},    isbn = {978-3-319-24277-4},    url = {https://ggplot2.tidyverse.org},}
 
-@Manual{,
-  title = {dplyr: A Grammar of Data Manipulation},
-  author = {Hadley Wickham and Romain François and Lionel {Henry} and Kirill Müller},
-  year = {2020},
-  note = {R package version 1.0.2},
-  url = {https://CRAN.R-project.org/package=dplyr},
-}
+ @Manual{,    title = {ggdendro: Create Dendrograms and Tree Diagrams Using 'ggplot2'},    author = {Andrie {de Vries} and Brian D. Ripley},    year = {2020},    note = {R package version 0.1.22},    url = {https://CRAN.R-project.org/package=ggdendro},}
+  
+@Article{,    author = {Tal Galili},    title = {dendextend: an R package for visualizing, adjusting, and comparing trees of hierarchical clustering},    journal = {Bioinformatics},    year = {2015},    doi = {10.1093/bioinformatics/btv428},    url = {https://academic.oup.com/bioinformatics/article/31/22/3718/240978/dendextend-an-R-package-for-visualizing-adjusting},    eprint = {https://academic.oup.com/bioinformatics/article-pdf/31/22/3718/17122682/btv428.pdf},}
+
+@Article{,    title = {ape 5.0: an environment for modern phylogenetics and evolutionary analyses in {R}},    author = {E. Paradis and K. Schliep},    journal = {Bioinformatics},    year = {2019},    volume = {35},    pages = {526-528},}
+
+  @Article{,    author = {Edzer Pebesma},    title = {{Simple Features for R: Standardized Support for Spatial Vector Data}},    year = {2018},    journal = {{The R Journal}},    doi = {10.32614/RJ-2018-009},    url = {https://doi.org/10.32614/RJ-2018-009},    pages = {439--446},    volume = {10},    number = {1},  }
+  
+  @Manual{,    title = {mapview: Interactive Viewing of Spatial Data in R},    author = {Tim Appelhans and Florian Detsch and Christoph Reudenbach and Stefan Woellauer},    year = {2020},    note = {R package version 2.9.0},    url = {https://CRAN.R-project.org/package=mapview},  }
+    
+    @Article{,    title = {The stringdist package for approximate string matching},    author = {M.P.J. {van der Loo}},    year = {2014},    journal = {The {R} {J}ournal},    volume = {6},    issue = {1},    url = {https://CRAN.R-project.org/package=stringdist},    pages = {111-122},  }
+    
+   @Manual{,    title = {gplots: Various R Programming Tools for Plotting Data},    author = {Gregory R. Warnes and Ben Bolker and Lodewijk Bonebakker and Robert Gentleman and Wolfgang Huber and Andy Liaw and Thomas Lumley and Martin Maechler and Arni Magnusson and Steffen Moeller and Marc Schwartz and Bill Venables},    year = {2020},    note = {R package version 3.1.1},    url = {https://CRAN.R-project.org/package=gplots},  }
+   
+    @Article{,    title = {The jsonlite Package: A Practical and Consistent Mapping Between JSON Data and R Objects},    author = {Jeroen Ooms},    journal = {arXiv:1403.2805 [stat.CO]},    year = {2014},    url = {https://arxiv.org/abs/1403.2805},  }
+    
+  
+  @Manual{,    title = {gtools: Various R Programming Tools},    author = {Gregory R. Warnes and Ben Bolker and Thomas Lumley},    year = {2020},    note = {R package version 3.8.2},    url = {https://CRAN.R-project.org/package=gtools},  }
+  
+   @Manual{,    title = {RCurl: General Network (HTTP/FTP/...) Client Interface for R},    author = {Duncan {Temple Lang}},    year = {2021},    note = {R package version 1.98-1.3},    url = {https://CRAN.R-project.org/package=RCurl},  }
+   
+   
+    @Article{,    title = {The Split-Apply-Combine Strategy for Data Analysis},    author = {Hadley Wickham},    journal = {Journal of Statistical Software},    year = {2011},    volume = {40},    number = {1},    pages = {1--29},    url = {http://www.jstatsoft.org/v40/i01/},  }
+    
+      @InCollection{,    author = {D. Charif and J.R. Lobry},    title = {Seqin{R} 1.0-2: a contributed package to the {R} project for statistical computing devoted to biological sequences retrieval and analysis.},    booktitle = {Structural approaches to sequence evolution: Molecules, networks, populations},    year = {2007},    editor = {U. Bastolla and M. Porto and H.E. Roman and M. Vendruscolo},    series = {Biological and Medical Physics, Biomedical Engineering},    pages = {207-232},    address = {New York},    publisher = {Springer Verlag},    note = {{ISBN :} 978-3-540-35305-8},  }
+      
+      
+   @InCollection{,    author = {D. Charif and J.R. Lobry},    title = {Seqin{R} 1.0-2: a contributed package to the {R} project for statistical computing devoted to biological sequences retrieval and analysis.},    booktitle = {Structural approaches to sequence evolution: Molecules, networks, populations},    year = {2007},    editor = {U. Bastolla and M. Porto and H.E. Roman and M. Vendruscolo},    series = {Biological and Medical Physics, Biomedical Engineering},    pages = {207-232},    address = {New York},    publisher = {Springer Verlag},    note = {{ISBN :} 978-3-540-35305-8},  }
